--- a/main.tex
+++ b/main.tex
@@ -342,6 +342,7 @@ which have not been published previously.
 Intermediary data for the analyses are made available
 both on GitHub at
 \url{https://github.com/spholmes/F1000_workflow}
+and 
 at the Stanford
 digital repository permanent url for this paper: \\
 \url{http://purl.stanford.edu/wh250nn9648}.
