--- a/PartIdada.tex
+++ b/PartIdada.tex
@@ -38,12 +38,8 @@ First we load the necessary packages.
 \hlcom{# Load packages into session, and print package version}
 \hlkwd{sapply}\hlstd{(}\hlkwd{c}\hlstd{(.cran_packages, .bioc_packages), require,} \hlkwc{character.only} \hlstd{=} \hlnum{TRUE}\hlstd{)}
 \end{alltt}
-
 \begin{alltt}
 \hlkwd{set.seed}\hlstd{(}\hlnum{100}\hlstd{)}
-
-\hlcom{# you have to change this (unless we put the data on dropbox and}
-\hlcom{# automatically download}
 \end{alltt}
 \end{kframe}
 \end{knitrout}
@@ -104,7 +100,7 @@ data before proceeding.
 \includegraphics[width=0.3\maxwidth]{dadafigure/profile-6}
 \caption{Forward and Reverse Error Profiles, the mean is in green, the median the solid orange line
 and the quartiles are the dotted orange lines.}
-\label{fig:r profile1}
+\label{fig:errorprofile1}
 \end{figure}
 
 Most Illumina sequencing data shows a trend of decreasing average quality
@@ -150,7 +146,7 @@ resolving variants that differ by as little as one nucleotide \cite{dada2}.
 
 The sequence data is imported into R from demultiplexed fastq files (i.e. one
 fastq for each sample) and simultaneously dereplicated to remove redundancy. We
-name the resulting `derep-class` objects by their sample name.
+name the resulting {\tt derep-class} objects by their sample name.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
@@ -187,8 +183,9 @@ large) subset of the data.
 {\ttfamily\noindent\itshape\color{messagecolor}{\#\# Initial error matrix unspecified. Error rates will be initialized to the maximum possible estimate from this data.}}\begin{verbatim}
 ## Initializing error rates to maximum possible estimate.
 ## Sample 1 - 7084 reads in 1955 unique sequences.
-## ..........
+## .......
 ## Sample 40 - 4191 reads in 922 unique sequences.
+##    selfConsist step 5 
 ## Convergence after  5  rounds.
 \end{verbatim}
 \begin{alltt}
@@ -199,8 +196,9 @@ large) subset of the data.
 {\ttfamily\noindent\itshape\color{messagecolor}{\#\# Initial error matrix unspecified. Error rates will be initialized to the maximum possible estimate from this data.}}\begin{verbatim}
 ## Initializing error rates to maximum possible estimate.
 ## Sample 1 - 7084 reads in 1548 unique sequences.
-## .....................
+## .......
 ## Sample 40 - 4191 reads in 999 unique sequences.
+##    selfConsist step 6 
 ## Convergence after  6  rounds.
 \end{verbatim}
 \end{kframe}
@@ -209,7 +207,6 @@ large) subset of the data.
 In order to verify that the error rates have been reasonably
 well-estimated, we inspect the fit between the observed error rates (black
 points) and the fitted error rates (black lines) in Figure \ref{fig:errorprofile1}.
-
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
@@ -228,8 +225,8 @@ points) and the fitted error rates (black lines) in Figure \ref{fig:errorprofile
 \end{figure}
 
 The DADA2 sequence inference method can run in two different modes:
-Independent inference by sample (`pool=FALSE`), and inference from the
-pooled sequencing reads from all samples (`pool=TRUE`). Independent
+Independent inference by sample ({\tt pool=FALSE}), and inference from the
+pooled sequencing reads from all samples ({\tt pool=TRUE}). Independent
 inference has the advantage that computation time is linear
 in the number of samples, and memory requirements are flat with the
 number of samples. This allows scaling out to datasets of almost unlimited
@@ -238,9 +235,9 @@ intractable for datasets of tens of millions of reads.
 However, pooling improves the detection of rare variants that
 were seen just once or twice in an individual sample but many times across
 all samples. As this dataset is not particularly large, we perform pooled
-inference. *Of potential interest, the
-\href{https://github.com/benjjneb/dada2}{development version of dada2}
-has added multithreading, which can substantially speed this step.*
+inference. 
+As of version 1.2, multithreading can be activated with the arguments 
+{\tt multithread = TRUE}, which can substantially speed this step.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
@@ -328,7 +325,7 @@ RDP v14 training set \cite{cole2009rdp}.
 \end{knitrout}
 
 GreenGenes and Silva training set {\tt fasta} files formatted for the
-`assignTaxonomy` function are also available for download at
+{\tt assignTaxonomy} function are also available for download at
 \url{https://www.dropbox.com/sh/mfcivbudmc21cqt/AAB1l-AUM5uKvjrR33ct-cTXa?dl=0}.
 
 \subsection*{Construct phylogenetic tree}
@@ -347,6 +344,21 @@ multiple-alignment using the {\tt DECIPHER} R package
 \hlkwd{names}\hlstd{(seqs)} \hlkwb{<-} \hlstd{seqs} \hlcom{# This propagates to the tip labels of the tree}
 \hlstd{alignment} \hlkwb{<-} \hlkwd{AlignSeqs}\hlstd{(}\hlkwd{DNAStringSet}\hlstd{(seqs),} \hlkwc{anchor}\hlstd{=}\hlnum{NA}\hlstd{)}
 \end{alltt}
+\begin{verbatim}
+## Determining distance matrix based on shared 5-mers:
+## 
+## Clustering into groups by similarity:
+## 
+## Aligning Sequences:
+## 
+## Determining distance matrix based on alignment:
+## 
+## Reclustering into groups by similarity:
+## 
+## Realigning Sequences:
+## 
+## Refining the alignment:
+\end{verbatim}
 \end{kframe}
 \end{knitrout}
 
